--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,11 @@
 exportPattern("^[[:alpha:]]+")
 export(k2)
 export(pie_fitted_plot)
+export(interact_app)
+importFrom("stats", "aggregate", "formula")
+import(shiny)
+importFrom("dplyr","select")
+import(ggplot2)
+import(visNetwork)
+import(bnlearn)
+import(Rgraphviz)
