--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 1.0.0
 Authors@R: c(
   person("Foad", "Esmaeili", email = "foadesmaeili5@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-9638-0807")),
   person("Negar", "Soleimani", email = "negarsoleimani76@gmail.com", role = "cph", comment = c(ORCID = "0009-0002-5993-3801")),
-  person("Vahid","Rezaeitabar",email = "vhrezaei@atu.ac.ir", role = "cph",comment = c(ORCID = ""))
+  person("Vahid", "Rezaeitabar", email = "vhrezaei@atu.ac.ir", role = "cph", comment = c(ORCID = "0000-0001-8530-7359"))
   )
 Maintainer: Foad Esmaeili <foadesmaeili5@gmail.com>
-Description: Provides the K2 algorithm, a score-based algorithm for learning Bayesian Networks. It also includes interactive visualization of fitted values using 'shiny' and 'ggplot2'
+Description: Provides the K2 algorithm, a score-based algorithm for learning Bayesian Networks. It also includes interactive visualization of fitted values using 'shiny' and 'ggplot2'.
 License: GPL (>= 2)
 URL: https://github.com/foadesmaeili5/k2bn
 Encoding: UTF-8
@@ -19,9 +19,7 @@ Depends:
 Imports:
   bnlearn,
   ggplot2,
+  dplyr,
   shiny,
   visNetwork,
   Rgraphviz
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
