--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
   person("Negar", "Soleimani", email = "negarsoleimani76@gmail.com", role = "cph", comment = c(ORCID = "0009-0002-5993-3801")),
   person("Vahid", "Rezaeitabar", email = "vhrezaei@atu.ac.ir", role = "cph", comment = c(ORCID = "0000-0001-8530-7359"))
   )
-Maintainer: Foad Esmaeili <foadesmaeili5@gmail.com>
+Maintainer: 'Foad Esmaeili' <foadesmaeili5@gmail.com>
 Description: Provides the K2 algorithm, a score-based algorithm for learning Bayesian Networks. It also includes interactive visualization of fitted values using 'shiny' and 'ggplot2'.
 License: GPL (>= 2)
 URL: https://github.com/foadesmaeili5/k2bn
